--- a/baitapdiemB1-3.html
+++ b/baitapdiemB1-3.html
@@ -12,6 +12,12 @@
             margin: 0;
             padding: 0;
         }
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+        }
 
         header {
             background: #002F6C; /* Màu xanh của Real Madrid */
@@ -160,7 +166,7 @@
 
         img{
             text-align: center;
-            margin ;
+            margin 
         }
 
         
@@ -173,6 +179,7 @@
 <body>
     <header>
         <h1>Real Madrid CF</h1>
+        <h1>Manchester</h1>
         <nav>
             <ul>
                 <li><a href="#gioi-thieu">Giới Thiệu</a></li>
@@ -333,3 +340,4 @@
     </main>
 </body>
 </html>
+
