lan commit thu 3

--- a/baitapdiemB1-3.html
+++ b/baitapdiemB1-3.html
@@ -18,6 +18,12 @@
             margin: 0;
             padding: 0;
         }
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+        }
 
         header {
             background: #002F6C; /* Màu xanh của Real Madrid */
